@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-14T08:07:33Z",
-  "count_outdated" : 1647,
-  "uniques_outdated" : 468,
-  "count" : 1689,
+  "timestamp" : "2022-07-14T16:06:50Z",
+  "count_outdated" : 1649,
+  "uniques_outdated" : 469,
+  "count" : 1691,
   "uniques" : 490,
   "clones" : [
-    {
-      "timestamp": "2022-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-01T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
